# internal/pkg/models/product.go
@@ -1,0 +1,10 @@
+package models
+
+// Product product model
+type Product struct {
+	Model
+	Name        string `json:"name"`
+	Description string `json:"description,omitempty"`
+	Price       int    `json:"price"`
+	Amount      int    `json:"amount"`
+}
