# internal/pkg/product/request.go
@@ -1,0 +1,8 @@
+package product
+
+type createRequest struct {
+	Name        string `json:"name"`
+	Description string `json:"description,omitempty"`
+	Price       int    `json:"price"`
+	Amount      int    `json:"amount"`
+}
